<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <include layout="@layout/title_three_text" />
    
    <RelativeLayout
        android:id="@+id/rl_user_img"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
         >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_head_img" />

        <ImageView
            android:id="@+id/head_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_alignParentRight="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#90909090" />

    <RelativeLayout
        android:id="@+id/rl_user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_user_name" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
           />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#90909090" />

    <RelativeLayout
        android:id="@+id/rl_user_mobile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_user_mobile" />

        <TextView
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#90909090" />

    <RelativeLayout
        android:id="@+id/rl_user_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:id="@+id/addressTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_user_address" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addressTag"
              />
    </RelativeLayout>

</LinearLayout>