<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" >

        <LinearLayout
             android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/login_div"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="100dip"
                android:background="@drawable/background_login_div_bg"
                android:padding="15dip" >

                <!-- 账号 -->

                <TextView
                    android:id="@+id/login_user_input"
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/login_label_username" />

                <EditText
                    android:id="@+id/username_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_user_input"
                    android:hint="@string/login_username_hint"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="158110065" />
                <!-- 密码 text -->

                <TextView
                    android:id="@+id/login_password_input"
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_edit"
                    android:layout_marginTop="3dp"
                    android:text="@string/login_label_password" />

                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_password_input"
                    android:inputType="textPassword"
                    android:password="true"
                    android:singleLine="true"
                    android:text="123" />
                <!-- 登录button -->

                <Button
                    android:id="@+id/signin_button"
                    android:layout_width="80dip"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dip"
                     
                    android:layout_alignRight="@id/password_edit"
                    android:layout_below="@id/password_edit"
                    android:background="@drawable/bg_button_login_bt"
                    android:text="@string/login_label_signin" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/register_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/login_register_link"
                    android:textColor="#888"
                    android:textColorLink="#FF0066CC" />

                <ImageView
                    android:id="@+id/miniTwitter_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="25dp"
                    android:src="@drawable/salesroom_icon" />
            </RelativeLayout>
        </LinearLayout>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</LinearLayout>