<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="115dp"
                android:layout_height="115dp" >
               <ImageView
                android:id="@+id/userIconView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scaleType="fitXY" />
            </FrameLayout>

          

            <TextView
                android:id="@+id/userNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:ellipsize="end"
                android:gravity="bottom"
                android:minHeight="27dp"
                android:singleLine="true"
                android:textColor="#cccccc"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/salesroom_ly"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line1" >

                <ImageView
                    android:id="@+id/salesroom_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/salesroom_title"
                    android:src="@drawable/iconfont_iconpaimai" />

                <TextView
                    android:id="@+id/salesroom_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/menu_salesroom"
                    android:textColor="#cccccc"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/salesroom_news_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="23dp"
                    android:layout_toRightOf="@id/salesroom_title"
                    android:gravity="center"
                    android:textColor="#cccccc"
                    android:textSize="11dp" />
            </RelativeLayout>

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <RelativeLayout
                android:id="@+id/messages_ly"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/messages_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/messages_title"
                    android:src="@drawable/iconfon_message" />

                <TextView
                    android:id="@+id/messages_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/menu_message"
                    android:textColor="#cccccc"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/messages_news_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="23dp"
                    android:layout_toRightOf="@id/messages_title"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="11dp" />
            </RelativeLayout>

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <RelativeLayout
                android:id="@+id/manager_ly"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bid_ly" >

                <ImageView
                    android:id="@+id/manager_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/manager_title"
                    android:src="@drawable/iconfont_manager" />

                <TextView
                    android:id="@+id/manager_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/menu_manager"
                    android:textColor="#cccccc"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/manager_news_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="23dp"
                    android:layout_toRightOf="@id/manager_title"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="11dp" />
            </RelativeLayout>

            <View
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_above="@+id/bid_ly"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <RelativeLayout
                android:id="@+id/bid_ly"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/bid_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/bid_title"
                    android:src="@drawable/iconfont_bid" />

                <TextView
                    android:id="@+id/bid_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/menu_bid"
                    android:textColor="#cccccc"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/bid_news_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="23dp"
                    android:layout_toRightOf="@id/bid_title"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="11dp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>